--- a/css/foot.css
+++ b/css/foot.css
@@ -8,7 +8,7 @@
 
 div#CODEXFOOT div#CODEXPAGEINFO {
     vertical-align: bottom; text-align: center; height: 40px; 
-    position: fixed; left: 0px; right: 0px; bottom: 0px; z-index: 100;
+    position: absolute; left: 0px; right: 0px; bottom: 0px; z-index: 100;
     width: 80%; margin-left: 10%; margin-right: 10%; border: 0px;
     cursor: crosshair;
     display: none;}
