--- a/css/hud.css
+++ b/css/hud.css
@@ -9,6 +9,15 @@
     font-family: verdana,helvetica,sans,sans-serif;
     z-index: 100;}
 
+#CODEXHUDFRAME {
+    position: fixed; top: 0px; bottom: 0px; left: 0px; right: 0px;
+    width: 100%; height: 100%;
+    pointer-events: none;
+    font-family: verdana,helvetica,sans,sans-serif;
+    z-index: 100;}
+#CODEXHUDFRAME > * {
+    pointer-events: all;}
+
 #CODEXHUD a { text-decoration: none;}
 #CODEXHUD a img { border: transparent;}
 .cxMOUSE #CODEXHUD a:hover img { border: inherit;}
@@ -320,7 +329,7 @@ body #CODEXHUD.addgloss.glossaddlink #CODEXHEARTHOLDER {
     top: 150px; height: auto; min-height: 100px;}
 
 div#CODEXHUD #CODEXFOOT {
-    position: fixed; bottom: 0px; z-index: 300;}
+    position: absolute; bottom: 0px; z-index: 300;}
 
 div#CODEXHUD #CODEXFOOT #CODEXSHOWTEXT {
     position: absolute; z-index: 500;
@@ -489,7 +498,7 @@ div#CODEXNOTETEXT span.sbooknotelabel {
 /* HUD buttons */
 
 div#CODEXHUD img.hudbutton {
-    position: fixed; width: 50px; height: 50px;
+    position: absolute; width: 50px; height: 50px;
     border: solid transparent 2px; opacity: 0.20;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
     filter: alpha(opacity=20);
@@ -906,7 +915,7 @@ div#CODEXHUD div#CODEXSCANNER div.codexcard span.glossinfo span.isclickable {
     display: none;}
 body img.codexscanbutton {
     width: 50px; height: 100px;
-    position: fixed; bottom: 50%; 
+    position: absolute; bottom: 50%; 
     display: none; opacity: 0.5;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
     filter: alpha(opacity=50);
@@ -916,7 +925,7 @@ body img.codexscanbutton {
     -o-opacity: 0.50;}
 body img.codexpagebutton {
     width: 50px; height: 100px;
-    position: fixed; bottom: 50%; opacity: 0.15;
+    position: absolute; bottom: 50%; opacity: 0.15;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=15)";
     filter: alpha(opacity=15);
     -webkit-opacity: 0.15;
@@ -1120,20 +1129,6 @@ div#CODEXSTARTPAGE div.codexhelp td p {
 
 /* The page layout message/progress indicator */
 
-div.fdjtprogress#CODEXLAYOUTMESSAGE {
-    text-align: center; font-size: 20px; font-weight: bold;
-    color: black; background-color: lightgray;
-    position: fixed; z-index: 300;
-    bottom: 0px; left: 100px; right: 100px; height: 50px;
-    padding-top: 15px;
-    display: none;
-    opacity: 0.0; 
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
-    -webkit-opacity: 0;
-    -khtml-opacity: 0;
-    -moz-opacity: 0;
-    -o-opacity: 0;}
 body.cxLAYOUT.cxLAYOUTMESSAGE div#CODEXLAYOUTMESSAGE {
     display: block; opacity: 0.8;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
@@ -1156,20 +1151,6 @@ body.cxANIMATE #CODEXHUD div.fdjtprogress#CODEXLAYOUTMESSAGE {
 
 /* The cloud population message/progress indicator */
 
-div.fdjtprogress#CODEXINDEXMESSAGE {
-    text-align: center; font-size: 20px; font-weight: bold;
-    color: black; background-color: lightgray;
-    position: fixed; z-index: 300;
-    top: 0px; left: 100px; right: 100px; height: 50px;
-    padding-bottom: 15px;
-    display: none;
-    opacity: 0.0; 
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-    filter: alpha(opacity=0);
-    -webkit-opacity: 0;
-    -khtml-opacity: 0;
-    -moz-opacity: 0;
-    -o-opacity: 0;}
 body.cxINDEXING div#CODEXHUD.search div#CODEXINDEXMESSAGE,
 body.cxINDEXING div#CODEXHUD.searchresults div#CODEXINDEXMESSAGE {
     display: block; opacity: 0.8;
